--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <header>
-        <nav class="flex justify-between items-center p-5">
+        <nav class="flex flex-col md:flex-row justify-between items-center p-5">
             <section class="flex justify-center items-center gap-4">
                 <img src="assets/logo.png" alt="" class="w-[50px]">
                 <h1 class="font-extrabold text-green-700">
@@ -38,9 +38,10 @@
                 </h1>
             </section>
 
-            <section class="flex justify-center items-center gap-5">
+            <section class="flex justify-center items-center gap-5 mt-3 md:mt-0">
 
-                <div class="flex justify-center items-center gap-2 bg-[#41ff6b2a] rounded-3xl px-5 py-2">
+                <div
+                    class="flex justify-center items-center gap-2 bg-[#41ff6b2a] rounded-3xl px-3 py-1 md:px-5 md:py-2">
 
                     <h1 class="font-bold">0</h1>
 
@@ -48,7 +49,8 @@
 
                 </div>
 
-                <div class="flex justify-center items-center gap-2 bg-[#41ff6b2a] rounded-3xl px-5 py-2">
+                <div
+                    class="flex justify-center items-center gap-2 bg-[#41ff6b2a] rounded-3xl px-3 py-1 md:px-5 md:py-2">
 
                     <h1 class="font-bold">100</h1>
 
@@ -56,7 +58,7 @@
 
                 </div>
 
-                <div class="bg-[#00A63E] rounded-3xl px-5 py-2">
+                <div class="bg-[#00A63E] rounded-3xl px-3 py-1 md:px-5 md:py-2">
 
                     <h1 class="font-bold text-white"><span>0</span> Copy</h1>
 
@@ -66,10 +68,9 @@
         </nav>
 
         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] h-[240px] text-center p-5">
-            <img src="assets/logo-dark.png" alt="" class="h-[100px] mx-auto">
+            <img src="assets/logo-dark.png" alt="" class="h-[50px] md:h-[100px] mx-auto">
 
             <h1 class="text-white my-3">জরুরি সেবা ডিরেক্টরি</h1>
-
             <p class="text-white">
                 Government Emergency Services at Your Fingertip - A Project by Government of the People's Republic of
                 Bangladesh
@@ -78,7 +79,7 @@
 
     </header>
 
-    <main class="grid grid-cols-4 gap-4 p-5 bg-[#f5fff6] max-w-[90vw] mx-auto">
+    <main class="grid grid-cols-1 md:grid-cols-4 gap-4 p-5 bg-[#f5fff6] w-full md:max-w-[90vw] mx-auto">
         <!-- div>img+h1+p+h1+p+btn*2 -->
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
@@ -147,18 +148,6 @@
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
-            </div>
-        </div>
-
-        <div class="row-span-3 bg-white rounded-lg p-3 shadow-lg">
-            <div class="flex justify-between items-center">
-
-                <div class="flex justify-center items-center gap-2">
-                    <i class="fa-solid fa-clock-rotate-left"></i>
-                    <h1 class="font-bold">Call History</h1>
-                </div>
-
-                <button class="btn btn-active btn-success w-1/2 text-white rounded-3xl bg-[#00A63E]">Clear</button>
             </div>
         </div>
 
@@ -300,6 +289,17 @@
             </div>
         </div>
 
+        <div class="md:col-start-4 md:row-start-1 md:row-span-3 bg-white rounded-lg p-3 shadow-lg">
+            <div class="flex justify-between items-center">
+
+                <div class="flex justify-center items-center gap-2">
+                    <i class="fa-solid fa-clock-rotate-left"></i>
+                    <h1 class="font-bold">Call History</h1>
+                </div>
+
+                <button class="btn btn-active btn-success w-1/2 text-white rounded-3xl bg-[#00A63E]">Clear</button>
+            </div>
+        </div>
     </main>
 
     <script src="script.js"></script>
