readme file added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div
                     class="flex justify-center items-center gap-2 bg-[#41ff6b2a] rounded-3xl px-3 py-1 md:px-5 md:py-2">
 
-                    <h1 class="font-bold">0</h1>
+                    <h1 id="count-heart-icon" class="font-bold">0</h1>
 
                     <img src="assets/heart.png" alt="" class="w-[25px]">
 
@@ -52,7 +52,7 @@
                 <div
                     class="flex justify-center items-center gap-2 bg-[#41ff6b2a] rounded-3xl px-3 py-1 md:px-5 md:py-2">
 
-                    <h1 class="font-bold">100</h1>
+                    <h1 id="count-call-coin" class="font-bold">100</h1>
 
                     <img src="assets/coin.png" alt="" class="w-[25px]">
 
@@ -85,7 +85,7 @@
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
             <div class="flex items-center justify-between mb-3">
                 <img src="assets/emergency.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
-                <i class="fa-regular fa-heart text-gray-700"></i>
+                <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
             </div>
 
             <h1 class="font-bold">জাতীয় জরুরি সেবা</h1>
@@ -98,7 +98,7 @@
                     <i class="fa-regular fa-copy"></i>
                     Copy
                 </button>
-                <button class="btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
+                <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
@@ -108,7 +108,7 @@
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
             <div class="flex items-center justify-between mb-3">
                 <img src="assets/police.png" alt="" class="w-[30px] bg-[#DFEFFF] p-1.5 rounded-lg">
-                <i class="fa-regular fa-heart text-gray-700"></i>
+                <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
             </div>
 
             <h1 class="font-bold">পুলিশ</h1>
@@ -121,7 +121,7 @@
                     <i class="fa-regular fa-copy"></i>
                     Copy
                 </button>
-                <button class="btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
+                <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
@@ -131,7 +131,7 @@
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
             <div class="flex items-center justify-between mb-3">
                 <img src="assets/fire-service.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
-                <i class="fa-regular fa-heart text-gray-700"></i>
+                <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
             </div>
 
             <h1 class="font-bold">ফায়ার সার্ভিস</h1>
@@ -144,7 +144,7 @@
                     <i class="fa-regular fa-copy"></i>
                     Copy
                 </button>
-                <button class="btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
+                <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
@@ -154,7 +154,7 @@
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
             <div class="flex items-center justify-between mb-3">
                 <img src="assets/ambulance.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
-                <i class="fa-regular fa-heart text-gray-700"></i>
+                <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
             </div>
 
             <h1 class="font-bold">অ্যাম্বুলেন্স</h1>
@@ -167,7 +167,7 @@
                     <i class="fa-regular fa-copy"></i>
                     Copy
                 </button>
-                <button class="btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
+                <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
@@ -177,7 +177,7 @@
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
             <div class="flex items-center justify-between mb-3">
                 <img src="assets/emergency.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
-                <i class="fa-regular fa-heart text-gray-700"></i>
+                <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
             </div>
 
             <h1 class="font-bold">নারী ও শিশু সহায়তা</h1>
@@ -190,7 +190,7 @@
                     <i class="fa-regular fa-copy"></i>
                     Copy
                 </button>
-                <button class="btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
+                <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
@@ -200,7 +200,7 @@
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
             <div class="flex items-center justify-between mb-3">
                 <img src="assets/emergency.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
-                <i class="fa-regular fa-heart text-gray-700"></i>
+                <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
             </div>
 
             <h1 class="font-bold">দুদক</h1>
@@ -213,7 +213,7 @@
                     <i class="fa-regular fa-copy"></i>
                     Copy
                 </button>
-                <button class="btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
+                <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
@@ -223,7 +223,7 @@
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
             <div class="flex items-center justify-between mb-3">
                 <img src="assets/emergency.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
-                <i class="fa-regular fa-heart text-gray-700"></i>
+                <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
             </div>
 
             <h1 class="font-bold">বিদ্যুৎ বিভ্রাট</h1>
@@ -236,7 +236,7 @@
                     <i class="fa-regular fa-copy"></i>
                     Copy
                 </button>
-                <button class="btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
+                <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
@@ -246,7 +246,7 @@
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
             <div class="flex items-center justify-between mb-3">
                 <img src="assets/brac.png" alt="" class="w-[30px] bg-[#EDADC7] p-1.5 rounded-lg">
-                <i class="fa-regular fa-heart text-gray-700"></i>
+                <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
             </div>
 
             <h1 class="font-bold">ব্র্যাক</h1>
@@ -259,7 +259,7 @@
                     <i class="fa-regular fa-copy"></i>
                     Copy
                 </button>
-                <button class="btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
+                <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
@@ -269,7 +269,7 @@
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
             <div class="flex items-center justify-between mb-3">
                 <img src="assets/Bangladesh-Railway.png" alt="" class="w-[30px] bg-[#E3E7D3] p-1.5 rounded-lg">
-                <i class="fa-regular fa-heart text-gray-700"></i>
+                <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
             </div>
 
             <h1 class="font-bold">বাংলাদেশ রেলওয়ে</h1>
@@ -282,7 +282,7 @@
                     <i class="fa-regular fa-copy"></i>
                     Copy
                 </button>
-                <button class="btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
+                <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
                     <i class="fa-solid fa-phone"></i>
                     Call
                 </button>
