readme file questions are answered

--- a/index.html
+++ b/index.html
@@ -20,22 +20,27 @@
 
         .font-hind-madurai {
             font-family: "Hind Madurai", sans-serif;
-            /* font-weight: 400; */
         }
     </style>
 
 </head>
 
-<body>
+<body class="font-hind-madurai">
+
     <header>
+
         <nav class="flex flex-col md:flex-row justify-between items-center p-5">
+
             <section class="flex justify-center items-center gap-4">
+
                 <img src="assets/logo.png" alt="" class="w-[50px]">
+
                 <h1 class="font-extrabold text-green-700">
                     Emergency
                     <br>
                     Service
                 </h1>
+
             </section>
 
             <section class="flex justify-center items-center gap-5 mt-3 md:mt-0">
@@ -80,225 +85,348 @@
     </header>
 
     <main class="grid grid-cols-1 md:grid-cols-4 gap-4 p-5 bg-[#f5fff6] w-full md:max-w-[90vw] mx-auto">
-        <!-- div>img+h1+p+h1+p+btn*2 -->
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
+
             <div class="flex items-center justify-between mb-3">
+
                 <img src="assets/emergency.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
+
                 <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
+
             </div>
 
             <h1 class="font-bold">জাতীয় জরুরি সেবা</h1>
+
             <p class="text-gray-700">National Emergency</p>
+
             <h1 class="font-bold">999</h1>
+
             <p class="text-sm text-gray-700 bg-[#F2F2F2] p-3 rounded-2xl inline-block">সার্বজনীন</p>
 
             <div class="w-full flex justify-center gap-3 mt-3">
+
                 <button class="click-copy-btn btn btn-outline w-1/2 border-gray-400 text-gray-700">
-                    <i class="fa-regular fa-copy"></i>
-                    Copy
+
+                    <i class="fa-regular fa-copy"></i>Copy
+
                 </button>
+
                 <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
-                    <i class="fa-solid fa-phone"></i>
-                    Call
+
+                    <i class="fa-solid fa-phone"></i>Call
+
                 </button>
+
             </div>
+
         </div>
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
+
             <div class="flex items-center justify-between mb-3">
+
                 <img src="assets/police.png" alt="" class="w-[30px] bg-[#DFEFFF] p-1.5 rounded-lg">
+
                 <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
+
             </div>
 
             <h1 class="font-bold">পুলিশ</h1>
+
             <p class="text-gray-700">Police</p>
+
             <h1 class="font-bold">999</h1>
+
             <p class="text-sm text-gray-700 bg-[#F2F2F2] p-3 rounded-2xl inline-block">পুলিশ</p>
 
             <div class="w-full flex justify-center gap-3 mt-3">
+
                 <button class="click-copy-btn btn btn-outline w-1/2 border-gray-400 text-gray-700">
-                    <i class="fa-regular fa-copy"></i>
-                    Copy
+
+                    <i class="fa-regular fa-copy"></i>Copy
+
                 </button>
+
                 <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
-                    <i class="fa-solid fa-phone"></i>
-                    Call
+
+                    <i class="fa-solid fa-phone"></i>Call
+
                 </button>
+
             </div>
+
         </div>
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
+
             <div class="flex items-center justify-between mb-3">
+
                 <img src="assets/fire-service.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
+
                 <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
+
             </div>
 
             <h1 class="font-bold">ফায়ার সার্ভিস</h1>
+
             <p class="text-gray-700">Fire Service</p>
+
             <h1 class="font-bold">999</h1>
+
             <p class="text-sm text-gray-700 bg-[#F2F2F2] p-3 rounded-2xl inline-block">ফায়ার</p>
 
             <div class="w-full flex justify-center gap-3 mt-3">
+
                 <button class="click-copy-btn btn btn-outline w-1/2 border-gray-400 text-gray-700">
-                    <i class="fa-regular fa-copy"></i>
-                    Copy
+
+                    <i class="fa-regular fa-copy"></i>Copy
+
                 </button>
+
                 <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
-                    <i class="fa-solid fa-phone"></i>
-                    Call
+
+                    <i class="fa-solid fa-phone"></i>Call
+
                 </button>
+
             </div>
+
         </div>
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
+
             <div class="flex items-center justify-between mb-3">
+
                 <img src="assets/ambulance.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
+
                 <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
+
             </div>
 
             <h1 class="font-bold">অ্যাম্বুলেন্স</h1>
+
             <p class="text-gray-700">Ambulance</p>
+
             <h1 class="font-bold">1994-999999</h1>
+
             <p class="text-sm text-gray-700 bg-[#F2F2F2] p-3 rounded-2xl inline-block">স্বাস্থ্য</p>
 
             <div class="w-full flex justify-center gap-3 mt-3">
+
                 <button class="click-copy-btn btn btn-outline w-1/2 border-gray-400 text-gray-700">
-                    <i class="fa-regular fa-copy"></i>
-                    Copy
+
+                    <i class="fa-regular fa-copy"></i>Copy
+
                 </button>
+
                 <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
-                    <i class="fa-solid fa-phone"></i>
-                    Call
+
+                    <i class="fa-solid fa-phone"></i>Call
+
                 </button>
+
             </div>
+
         </div>
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
+
             <div class="flex items-center justify-between mb-3">
+
                 <img src="assets/emergency.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
+
                 <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
+
             </div>
 
             <h1 class="font-bold">নারী ও শিশু সহায়তা</h1>
+
             <p class="text-gray-700">Women & Child Helpline</p>
+
             <h1 class="font-bold">109</h1>
+
             <p class="text-sm text-gray-700 bg-[#F2F2F2] p-3 rounded-2xl inline-block">সহায়তা</p>
 
             <div class="w-full flex justify-center gap-3 mt-3">
+
                 <button class="click-copy-btn btn btn-outline w-1/2 border-gray-400 text-gray-700">
-                    <i class="fa-regular fa-copy"></i>
-                    Copy
+
+                    <i class="fa-regular fa-copy"></i>Copy
+
                 </button>
+
                 <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
-                    <i class="fa-solid fa-phone"></i>
-                    Call
+
+                    <i class="fa-solid fa-phone"></i>Call
+
                 </button>
+
             </div>
+
         </div>
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
+
             <div class="flex items-center justify-between mb-3">
+
                 <img src="assets/emergency.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
+
                 <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
+
             </div>
 
             <h1 class="font-bold">দুদক</h1>
+
             <p class="text-gray-700">Anti-Corruption</p>
+
             <h1 class="font-bold">106</h1>
+
             <p class="text-sm text-gray-700 bg-[#F2F2F2] p-3 rounded-2xl inline-block">সরকারি</p>
 
             <div class="w-full flex justify-center gap-3 mt-3">
+
                 <button class="click-copy-btn btn btn-outline w-1/2 border-gray-400 text-gray-700">
-                    <i class="fa-regular fa-copy"></i>
-                    Copy
+
+                    <i class="fa-regular fa-copy"></i>Copy
+
                 </button>
+
                 <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
-                    <i class="fa-solid fa-phone"></i>
-                    Call
+
+                    <i class="fa-solid fa-phone"></i>Call
+
                 </button>
+
             </div>
+
         </div>
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
+
             <div class="flex items-center justify-between mb-3">
+
                 <img src="assets/emergency.png" alt="" class="w-[30px] bg-[#FFE3E2] p-1.5 rounded-lg">
+
                 <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
+
             </div>
 
             <h1 class="font-bold">বিদ্যুৎ বিভ্রাট</h1>
+
             <p class="text-gray-700">Electricity Outage</p>
+
             <h1 class="font-bold">16216</h1>
+
             <p class="text-sm text-gray-700 bg-[#F2F2F2] p-3 rounded-2xl inline-block">বিদ্যুৎ</p>
 
             <div class="w-full flex justify-center gap-3 mt-3">
+
                 <button class="click-copy-btn btn btn-outline w-1/2 border-gray-400 text-gray-700">
-                    <i class="fa-regular fa-copy"></i>
-                    Copy
+
+                    <i class="fa-regular fa-copy"></i>Copy
+
                 </button>
+
                 <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
-                    <i class="fa-solid fa-phone"></i>
-                    Call
+
+                    <i class="fa-solid fa-phone"></i>Call
+
                 </button>
+
             </div>
+
         </div>
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
+
             <div class="flex items-center justify-between mb-3">
+
                 <img src="assets/brac.png" alt="" class="w-[30px] bg-[#EDADC7] p-1.5 rounded-lg">
+
                 <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
+
             </div>
 
             <h1 class="font-bold">ব্র্যাক</h1>
+
             <p class="text-gray-700">Brac</p>
+
             <h1 class="font-bold">16445</h1>
+
             <p class="text-sm text-gray-700 bg-[#F2F2F2] p-3 rounded-2xl inline-block">এনজিও</p>
 
             <div class="w-full flex justify-center gap-3 mt-3">
+
                 <button class="click-copy-btn btn btn-outline w-1/2 border-gray-400 text-gray-700">
-                    <i class="fa-regular fa-copy"></i>
-                    Copy
+
+                    <i class="fa-regular fa-copy"></i>Copy
+
                 </button>
+
                 <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
-                    <i class="fa-solid fa-phone"></i>
-                    Call
+
+                    <i class="fa-solid fa-phone"></i>Call
+
                 </button>
+
             </div>
+
         </div>
 
         <div class="bg-white rounded-lg p-3 shadow-lg my-auto">
+
             <div class="flex items-center justify-between mb-3">
+
                 <img src="assets/Bangladesh-Railway.png" alt="" class="w-[30px] bg-[#E3E7D3] p-1.5 rounded-lg">
+
                 <i class="click-heart-icon fa-regular fa-heart text-gray-700 hover:cursor-pointer"></i>
+
             </div>
 
             <h1 class="font-bold">বাংলাদেশ রেলওয়ে</h1>
+
             <p class="text-gray-700">Bangladesh Railway</p>
+
             <h1 class="font-bold">163</h1>
+
             <p class="text-sm text-gray-700 bg-[#F2F2F2] p-3 rounded-2xl inline-block">পরিবহন</p>
 
             <div class="w-full flex justify-center gap-3 mt-3">
+
                 <button class="click-copy-btn btn btn-outline w-1/2 border-gray-400 text-gray-700">
-                    <i class="fa-regular fa-copy"></i>
-                    Copy
+
+                    <i class="fa-regular fa-copy"></i>Copy
+
                 </button>
+
                 <button class="click-call-btn btn btn-active btn-success w-1/2 text-white bg-[#00A63E]">
-                    <i class="fa-solid fa-phone"></i>
-                    Call
+
+                    <i class="fa-solid fa-phone"></i>Call
+
                 </button>
+
             </div>
+
         </div>
 
+        <!-- call history -->
+
         <div class="md:col-start-4 md:row-start-1 md:row-span-3 bg-white rounded-lg p-3 shadow-lg">
+
             <div class="flex justify-between items-center">
 
                 <div class="flex justify-center items-center gap-2">
+
                     <i class="fa-solid fa-clock-rotate-left"></i>
+
                     <h1 class="font-bold">Call History</h1>
+
                 </div>
 
                 <button id="clear-btn"
                     class="btn btn-active btn-success w-1/2 text-white rounded-3xl bg-[#00A63E]">Clear</button>
+
             </div>
 
             <div id="call-history-container">
@@ -306,9 +434,11 @@
             </div>
 
         </div>
+
     </main>
 
     <script src="script.js"></script>
+
 </body>
 
 </html>
