--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <script src="https://kit.fontawesome.com/724471081d.js" crossorigin="anonymous"></script>
 
     <style>
-        /* font-hind-madurai  */
-        @import url('https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap');
+        /* font-hind-siliguri  */
+        @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap');
 
-        .font-hind-madurai {
-            font-family: "Hind Madurai", sans-serif;
+        .font-hind-siliguri {
+            font-family: "Hind Siliguri", sans-serif;
         }
     </style>
 
 </head>
 
-<body class="font-hind-madurai">
+<body class="font-hind-siliguri ">
 
     <header>
 
@@ -72,14 +72,17 @@
             </section>
         </nav>
 
-        <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] h-[240px] text-center p-5">
+        <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center p-5 flex flex-col gap-3">
+
             <img src="assets/logo-dark.png" alt="" class="h-[50px] md:h-[100px] mx-auto">
 
-            <h1 class="text-white my-3">জরুরি সেবা ডিরেক্টরি</h1>
+            <h1 class="text-white">জরুরি সেবা ডিরেক্টরি</h1>
+
             <p class="text-white">
                 Government Emergency Services at Your Fingertip - A Project by Government of the People's Republic of
                 Bangladesh
             </p>
+
         </section>
 
     </header>
